cf_analysis_results/checkerframework_3.42.0_results_WPI/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8/src/zz/spider/DownloadImage.java:54: error: (required.method.not.called) $$ 4 $$ method close $$ fos $$ java.io.FileOutputStream $$ regular method exit $$ ( 1413, 1450 ) $$ @MustCall method close may not have been invoked on fos or any of its aliases.
                fos = new FileOutputStream(imageFile);
                    ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
